# c2pa-rs-js-binding-library

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json
.codex/: identityAssertions.txt
crate/: Cargo.toml
crate/src/: lib.rs
script/: outputManifestFromJpg.ts  outputManifestFromStructuredText.ts  preparePublish.mjs
src/: index.ts
test/: clean.test.js  hello.test.js  identity.test.js  image.test.js  ingredient.test.js  jsonc.test.js  markdown.test.js  metadata.test.js  multi_ingredient.test.js  signing.test.js  thumbnail.test.js  xml.test.js
