[package]
name = "c2pa-rs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.8"
tsify = { version = "0.4.5", features = ["js"] }
c2pa = { version = "0.68.0", default-features = false, features = ["rust_native_crypto", "pdf"] }
getrandom = { version = "0.2", features = ["js"] }
